--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -44,21 +44,164 @@
                 <a href=""><i class="fa fa-cog mr-1"></i><span class="hidden">Settings</span></a>
             </div>
             <div class="maincontent">
-                <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <!-- page header starts-->
+                <nav class="navbar navbar-expand-lg navbar-light bg-white shadow">
                     <h5 class="navbar-brand" href="#" style="font-family:Lucida Bright;">
                         MsBoujeeLashes
                     </h5>
                 </nav>
-                <div>
-                    <div class="row">
-                        <div class="col-md-2">total orders</div>
-                        <div class="col-md-2">most recent order </div>
-                        <div class="col-md-2">most recent message</div>
-                        <div class="col-md-2">recnt post </div>
-                        <div class="col-md-2">recently shipped</div>
-                        <div class="col-md-2"></div>
+                <!-- page header starts-->
+
+                <!-- starting point of the top cards-->
+                <div class="ml-md-5 ml-sm-4 ml-xs-4 mt-3">
+                    <div class="row pl-2">
+                        <!--card 1-->
+                        <div class="col-md-3 mt-3">
+                            <div id="dash-card" class="shadow">
+                                <div class="d-flex justify-content-between">
+                                    <h6>Orders</h6>
+                                    <i class="fa fa-first-order mr-1 dash-icon-circle fa-2x "></i>
+                                </div>
+                                <div class="badge badge-danger">
+                                    <h6> <strong>231</strong> </h6>
+                                </div>
+                            </div>
+                        </div>
+                        <!--card 1-->
+                        <!--card 2-->
+                        <div class="col-md-3 mt-3">
+                            <div id="dash-card" class="shadow">
+                                <div class="d-flex justify-content-between">
+                                    <h6>Messages</h6>
+                                    <i class="fa fa-comments mr-1 dash-icon-circle fa-2x "></i>
+                                </div>
+                                <div class="badge badge-warning">
+                                    <h6> <strong>231</strong> </h6>
+                                </div>
+                            </div>
+                        </div>
+                        <!--card 2-->
+                        <!--card 3-->
+                        <div class="col-md-3 mt-3">
+                            <div id="dash-card" class="shadow">
+                                <div class="d-flex justify-content-between">
+                                    <h6>Products</h6>
+                                    <i class="fa fa-tag mr-1 dash-icon-circle fa-2x "></i>
+                                </div>
+                                <div class="badge badge-primary">
+                                    <h6> <strong>231</strong> </h6>
+                                </div>
+                            </div>
+                        </div>
+                        <!--card 3-->
+                        <!--card 4-->
+                        <div class="col-md-3 mt-3">
+                            <div id="dash-card" class="shadow">
+                                <div class="d-flex justify-content-between">
+                                    <h6>Shipped</h6>
+                                    <i class="fa fa-truck fa-2x mr-1 dash-icon-circle"></i>
+                                </div>
+                                <div class="badge badge-info">
+                                    <h6> <strong>231</strong> </h6>
+                                </div>
+                            </div>
+                        </div>
+                        <!--card 4-->
                     </div>
                 </div>
+                <!-- ending point of the top cards-->
+
+                <!-- start of recent upload and recent orders-->
+                <div class="ml-md-5 ml-sm-4 ml-xs-4 mt-3">
+                    <div class="row pl-2">
+
+                        <!--start of upload -->
+                        <div class="col-md-9 mt-4">
+                            <div class="shadow uploads">
+                                <div class="d-flex justify-content-between">
+                                    <h6>
+                                        <strong>Recently Uploaded Products</strong>
+                                    </h6>
+                                    <i class="fa fa-tag mr-1 dash-icon-circle"></i>
+                                </div>
+                                <hr>
+                                <div class="">
+
+                                </div>
+                            </div>
+                        </div>
+                        <!--end of upload-->
+
+                        <!--start of recent orders-->
+                        <div class="col-md-3 mt-4">
+                            <div class="shadow uploads">
+                                <div class="d-flex justify-content-between">
+                                    <h6>
+                                        <strong>Recent Orders</strong>
+                                    </h6>
+                                    <i class="fa fa-first-order mr-1 dash-icon-circle"></i>
+                                </div>
+                                <hr>
+                                <div>
+                                    <div class="orders">
+                                        <div class="d-flex justify-content-between mb-2">
+                                            <div class="d-flex justify-content-between">
+                                                <img src="../../assets/images/babygirl.jpeg" alt="" class="recentimg">
+                                                <div class="">
+                                                    <h6><strong class="text-muted">sexy ladies</strong></h6>
+                                                    <h6 style="font-weight: bold;"><small class="text-muted"><i class="fa fa-dollar"></i>2300</small></h6>
+                                                </div>
+                                            </div>
+                                            <div class="mincircle">
+                                                <h6> <strong>2</strong> </h6>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex justify-content-between mb-2">
+                                            <div class="d-flex justify-content-between">
+                                                <img src="../../assets/images/babygirl.jpeg" alt="" class="recentimg">
+                                                <div class="">
+                                                    <h6><strong class="text-muted">sexy ladies</strong></h6>
+                                                    <h6 style="font-weight: bold;"><small class="text-muted"><i class="fa fa-dollar"></i>2300</small></h6>
+                                                </div>
+                                            </div>
+                                            <div class="mincircle">
+                                                <h6> <strong>2</strong> </h6>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex justify-content-between mb-2">
+                                            <div class="d-flex justify-content-between">
+                                                <img src="../../assets/images/babygirl.jpeg" alt="" class="recentimg">
+                                                <div class="">
+                                                    <h6><strong class="text-muted">sexy ladies</strong></h6>
+                                                    <h6 style="font-weight: bold;"><small class="text-muted"><i class="fa fa-dollar"></i>2300</small></h6>
+                                                </div>
+                                            </div>
+                                            <div class="mincircle">
+                                                <h6> <strong>2</strong> </h6>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex justify-content-between mb-2">
+                                            <div class="d-flex justify-content-between">
+                                                <img src="../../assets/images/babygirl.jpeg" alt="" class="recentimg">
+                                                <div class="">
+                                                    <h6><strong class="text-muted">sexy ladies</strong></h6>
+                                                    <h6 style="font-weight: bold;"><small class="text-muted"><i class="fa fa-dollar"></i>2300</small></h6>
+                                                </div>
+                                            </div>
+                                            <div class="mincircle">
+                                                <h6> <strong>2</strong> </h6>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <small><a href="" class="text-muted">View All <i class="fa fa-arrow-right"></i> </a></small>
+                                </div>
+                            </div>
+                        </div>
+                        <!--end of recent orders-->
+                    </div>
+                </div>
+                <!--end of recent upload and recent orders -->
             </div>
         </main>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
