--- a/views/login.html
+++ b/views/login.html
@@ -33,9 +33,10 @@
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <h5 class="navbar-brand offset-md-2 offset-sm-2" href="#" style="font-family:Lucida Bright;">
+            <!-- <h5 class="navbar-brand offset-md-2 offset-sm-2" href="#" style="font-family:Lucida Bright;">
                 Ms.BoujeeLashes&Hair
-            </h5>
+            </h5>-->
+            <img src="../assets/images/ms3.png" class="navbar-brand offset-md-2 offset-sm-2" height="100px" width="180px">
         </nav>
         <main>
             <div class="container">
