--- a/views/details.html
+++ b/views/details.html
@@ -25,9 +25,10 @@
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <h5 class="navbar-brand offset-md-2 offset-sm-2" href="#" style="font-family:Lucida Bright;">
+            <!-- <h5 class="navbar-brand offset-md-2 offset-sm-2" href="#" style="font-family:Lucida Bright;">
                 Ms.BoujeeLashes&Hair
-            </h5>
+            </h5>-->
+            <img src="../assets/images/ms3.png" class="navbar-brand offset-md-2 offset-sm-2" height="100px" width="180px">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
